--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>The University of Hong Kong</span>&nbsp;&nbsp;<span class="author-block"><sup>2</sup>University of Oxford</span>&nbsp;&nbsp;<be>Conferance name and year</span>
+                    <span class="author-block"><sup>1</sup>The University of Hong Kong</span>&nbsp;&nbsp;<span class="author-block"><sup>2</sup>University of Oxford</span>&nbsp;&nbsp;
+                    <be>CVPR 2024</span>
                   </div>
 
                   <div class="column has-text-centered">
