--- a/index.html
+++ b/index.html
@@ -148,17 +148,20 @@
 </section>
 <!-- End paper abstract -->
 
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="Overview" class="carousel results-carousel">
-      <!-- Your image here -->
-      <img src="static/images/basenet_image.jpg" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        To render the target view, the method starts by selecting a set of K reference views and extracting their image features using a shared encoder, along with calculating the xyz-maps from depth information and camera parameters. For each point along the ray, the system projects it onto all K reference views and samples the feature vector, color, and xyz values from the reference views. These values are then aggregated using the corresponding feature vectors and relative directions to compute the blending weights for both color and xyz. The final color and xyz values are determined as a weighted sum of the source view. Additionally, the sigma value for the rendering process is predicted based on the feature and viewing directions. In the tracking step, the method uses RGB information to match points between the target and reference views, and by minimizing the distances between the matched xyz points, it optimizes the target camera.
-      </h2>
-      </div>
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Overview</h2>
+          <!-- Your image here -->
+          <img src="static/images/basenet_image.jpg" alt="MY ALT TEXT"/>
+          <div class="content has-text-justified">
+              <p>
+                In this paper, we address the challenging problem of visual SLAM with neural scene representations. Recently, neural scene representations have shown promise for SLAM to produce dense 3D scene reconstruction with high quality. However, existing methods require scene-specific optimization, leading to time-consuming mapping processes for each individual scene. To overcome this limitation, we propose IBD SLAM, an Image-Based Depth fusion framework for generalizable SLAM. In particular, we adopt a Neural Radiance Field (NeRF) for scene representation. Inspired by multi-view image-based rendering, instead of learning a fixed-grid scene representation, we propose to learn an image-based depth fusion model that fuses depth maps of multiple reference views into a xyz-map representation. Once trained, this model can be applied to new, uncalibrated monocular RGBD videos of unseen scenes, without the need for retraining, and reconstructs full 3D scenes efficiently with a light-weight pose optimization procedure. We thoroughly evaluate IBD-SLAM on public visual SLAM benchmarks, outperforming the previous state-of-the-art while being 10×faster in the mapping stage.
+              </p>
+          </div>
     </div>
+  </div>
 </div>
 </section>
 
@@ -176,7 +179,14 @@
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/detailed.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/detailed_cut1.jpg" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          Detailed reconstruction results are available for the room (top three rows) and office (bottom three rows).
+        </h2>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/detailed_cut2.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           Detailed reconstruction results are available for the room (top three rows) and office (bottom three rows).
         </h2>
@@ -190,7 +200,14 @@
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/scannet.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/scannet_cut1.jpg" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          Detailed reconstruction results on ScanNet are available.
+        </h2>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/scannet_cut2.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           Detailed reconstruction results on ScanNet are available.
         </h2>
