--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <div class="container">
       <h3 class="title is-4">Reconstruction</h3>
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe style="clip-path: inset(1px 1px)" src="https://sketchfab.com/playlists/embed?autostart=1&amp;autospin=0.25&amp;collection=3dbbcc908ef54a13b21ce4ff773d9a75" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" mozallowfullscreen="true" webkitallowfullscreen="true" width="100%" height="100%" frameborder="0"></iframe>
+          <iframe style="clip-path: inset(1px 1px); height: 600px;" src="https://sketchfab.com/playlists/embed?autostart=1&amp;autospin=0.25&amp;collection=3dbbcc908ef54a13b21ce4ff773d9a75" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen" mozallowfullscreen="true" webkitallowfullscreen="true" width="100%" height="100%" frameborder="0"></iframe>
           <!--iframe
             src="https://sketchfab.com/models/YOUR_MODEL_ID/embed?autostart=1&amp;autospin=0.25"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"
